# podpull

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  pyproject.toml  requirements.txt  vercel.json
.github/workflows/: ci.yml  publish.yml  release.yml
api/: __init__.py  index.py
docs/: HOSTING.md  index.html
docs/designs/: aurora.html  index.html  swiss.html  terminal.html
docs/superpowers/plans/: 2026-07-07-feed-robustness-podcastindex.md  2026-07-21-json-output.md  2026-07-21-serve-local-ui.md
docs/superpowers/specs/: 2026-07-07-feed-robustness-podcastindex-design.md  2026-07-21-json-output-design.md  2026-07-21-serve-local-ui-design.md
public/: index.html
public/app/: index.html
scripts/: sync_web_public.py
src/podget/: __init__.py  cli.py  core.py
src/podpull/: __init__.py  cli.py  core.py
src/podpull/integrations/: SKILL.md  cursor_rule.mdc  opencode_command.md
src/podpull/serve/: __init__.py  server.py  trending.py
src/podpull/serve/static/: index.html
tests/: test_api_vercel.py  test_cli.py  test_core.py  test_network.py  test_serve.py  test_trending.py
tests/fixtures/feeds/: acast.xml  anchor.xml  fireside.xml  itunes_title_order.xml  libsyn.xml  lizhi.xml  media_content_only.xml  omny.xml  transistor.xml  typlog.xml  wavpub.xml
