[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "podpull"
version = "0.6.0"
description = "Download specific podcast episode audio from Apple Podcasts, RSS feeds, or xiaoyuzhou links — with an interactive picker."
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [{ name = "xiaoleiyu" }]
keywords = ["podcast", "download", "apple-podcasts", "rss", "xiaoyuzhou", "mp3", "m4a", "cli"]
classifiers = [
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Multimedia :: Sound/Audio",
]
dependencies = [
    "rich>=13.7",
    "rich-argparse>=1.4",
    "questionary>=2.0",
]

[project.urls]
Homepage = "https://github.com/xiaoleiy/podpull"
Issues = "https://github.com/xiaoleiy/podpull/issues"

[project.scripts]
podpull = "podpull.cli:main"

[project.optional-dependencies]
dev = ["pytest>=7"]

[tool.hatch.build.targets.wheel]
packages = ["src/podpull"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.pytest.ini_options]
markers = [
    "network: hits live podcast hosts; excluded by default (run: pytest -m network)",
]
addopts = "-m 'not network'"
